[project]
name = "podtran"
dynamic = ["version"]
description = "Podcast translation CLI for low-memory laptops"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx>=0.27",
    "openai>=1.0",
    "pydantic>=2.8",
    "rich>=13.7",
    "tenacity>=8.0",
    "tomli>=2.0; python_version < '3.11'",
    "typer>=0.12",
    "whisperx>=3.3",
]

[project.optional-dependencies]
qwen-local = [
    "qwen-tts>=0.1.1,<0.2",
]

[project.scripts]
podtran = "podtran.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/podtran/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/podtran"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
